# any_library_python

./: .gitignore
dataclass/: source
dataclass/1/: dataclass.py
dataclass/2/: card.py  deck.py  position.py  source
gRPC/: Pipfile  helloworld.proto  source
itertools/: custom_iterator.py  iterator_abstraction.py  itertools.py  main.py
poetry/: pyproject.toml
sockets/: client.py  server.py  source
solid_principles/: solid.py  solid_2_composition.py  source
sql_libraries/: base.py  factory.py  source  tester.py
sql_libraries/sqlite/: app_db.db  connection.py  constants.py  main.py
